--- a/introducao-javascript/css/index.css
+++ b/introducao-javascript/css/index.css
@@ -146,3 +146,9 @@ button[disabled=disabled], button:disabled {
 	color: red;
 	text-shadow: black;
 }
+
+#filtrar-tabela{
+	width: 200px;
+	height: 30px;
+	margin-bottom: 12px;
+}
