--- a/introducao-javascript/css/index.css
+++ b/introducao-javascript/css/index.css
@@ -137,9 +137,13 @@ button[disabled=disabled], button:disabled {
 	background-color: lightcoral;
 }
 
-.fadeOut {
+.fadeOut{
     opacity: 0;
     transition: 0.5s;
+}
+
+.invisivel {
+	display: none;
 }
 
 #mensagens-erro{
